# nlp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
output/: output.txt
