[project]
name = "nlp-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "nerflifepls",email = "spyropoulos.ilias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (>=1.21,<2.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (>=3.8.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"
notebook = "^7.4.2"
black = "^25.1.0"
ruff = "^0.11.9"

